sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:5: error: illegal start of simple expression
    var modif = true;
    ^