sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var modif = true;
  while(traverse())
  	var modif = true;
}


def traverse() : Boolean = {
   var swapped = false;
   for (i <- 0 to getValueCount() - 2){
     if(isSmaller(i+1, i)){
   		 swap(i,i+1);
       swapped = true;
	   }
   }
   return swapped;
   
}